--- a/core/res/res/drawable/pointer_arrow_icon.xml
+++ b/core/res/res/drawable/pointer_arrow_icon.xml
@@ -1,5 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<pointer-icon xmlns:android="http://schemas.android.com/apk/res/android"
-    android:bitmap="@drawable/pointer_arrow"
-    android:hotSpotX="6dp"
-    android:hotSpotY="6dp" />
+<pointer-icon android:bitmap="@drawable/pointer_arrow" android:hotSpotX="4.0dip" android:hotSpotY="4.0dip"
+  xmlns:android="http://schemas.android.com/apk/res/android" />
