--- a/core/res/res/values/styles.xml
+++ b/core/res/res/values/styles.xml
@@ -1320,6 +1320,16 @@ please see styles_device_defaults.xml.
         <item name="pointerIconSpotHover">@drawable/pointer_spot_hover_icon</item>
         <item name="pointerIconSpotTouch">@drawable/pointer_spot_touch_icon</item>
         <item name="pointerIconSpotAnchor">@drawable/pointer_spot_anchor_icon</item>
+        <!--add by xiezhongtian
+        <item name="pointerIconArrowLeftRight">@drawable/pointer_arrow_leftright</item>
+        <item name="pointerIconArrowUpDown">@drawable/pointer_arrow_updown</item>
+        <item name="pointerIconArrowTopLeft">@drawable/pointer_arrow_lean14</item>
+        <item name="pointerIconArrowTopRight">@drawable/pointer_arrow_lean23</item>
+        <item name="pointerIconArrowDrag">@drawable/pointer_arrow_drag</item>
+        <item name="pointerIconArrowInput">@drawable/pointer_arrow_input</item>
+        <item name="pointerIconArrowLink">@drawable/pointer_arrow_link</item>
+        -->       
+
     </style>
 
     <!-- Wifi dialog styles -->
