add ActivityFrameView and fixed some compile error include Input relate; some ponit_arrow res file added; add DialogFrameView also fixed some compile error;

--- a/core/res/res/values/attrs.xml
+++ b/core/res/res/values/attrs.xml
@@ -7270,7 +7270,16 @@
         <!-- Reference to a pointer icon drawable with STYLE_SPOT_TOUCH -->
         <attr name="pointerIconSpotTouch" format="reference" />
         <!-- Reference to a pointer icon drawable with STYLE_SPOT_ANCHOR -->
+
+        <!--add by xiezhongtian-->
         <attr name="pointerIconSpotAnchor" format="reference" />
+        <attr name="pointerIconArrowLeftRight" format="reference" />
+        <attr name="pointerIconArrowUpDown" format="reference" />
+        <attr name="pointerIconArrowTopLeft" format="reference" />
+        <attr name="pointerIconArrowTopRight" format="reference" />
+        <attr name="pointerIconArrowDrag" format="reference" />
+        <attr name="pointerIconArrowInput" format="reference" />
+        <attr name="pointerIconArrowLink" format="reference" />
     </declare-styleable>
 
     <declare-styleable name="PointerIcon">
